# flet-localisation

./: .gitignore  README.md  pyproject.toml
.github/: FUNDING.yml
examples/flet_localisation_example/: pyproject.toml
examples/flet_localisation_example/src/: main.py
flet_localisation/: __init__.py
flutter/flet_localisation/: pubspec.yaml
flutter/flet_localisation/lib/: flet_localisation.dart
flutter/flet_localisation/test/: flet_localisation_test.dart
flutter/flet_localization/: README.md  pubspec.yaml
flutter/flet_localization/lib/: flet_localisation.dart  flet_localization.dart
flutter/flet_localization/lib/src/: create_control.dart  localisation.dart  localization.dart
flutter/flet_localization/test/: flet_localization_test.dart
python/flet_localisation/: pyproject.toml
python/flet_localization/: pyproject.toml
src/flet_localisation/: flet_localisation.py
src/flutter/flet_localisation/: README.md  pubspec.yaml
src/flutter/flet_localisation/lib/: flet_localisation.dart
src/flutter/flet_localisation/lib/src/: create_control.dart  flet_localisation.dart
