[project]
name = "flet-localisation"
version = "0.8.0"
description = ""
authors = [
    { name = "tct123", email = "42028373+tct123@users.noreply.github.com" },
]
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = ["pyjnius"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
